--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "![logo_ironhack_blue 7](https://user-images.githubusercontent.com/23629340/40541063-a07a0a8a-601a-11e8-91b5-2f13e4e6b441.png)",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "node ./index.js"
+    "dev": "nodemon index.js"
   },
   "license": "MIT",
   "devDependencies": {
